--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@coral-xyz/borsh": "^0.30.1",
     "@types/bn.js": "^5.1.5",
     "@types/node": "^20.14.1",
     "dotenv": "^16.4.5",
