fix: added support for browser, esm, and commonjs

--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "pumpdotfun-sdk",
   "version": "1.2.1",
   "description": "A simple SDK for interacting with pumpdotfun",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "module": "./dist/esm/index.js",
+  "main": "./dist/cjs/index.js",
+  "browser": "./dist/browser/index.js",
+  "types": "dist/cjs/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "rimraf dist/ && npm run build:node && npm run build:browser",
+    "build:node": "tsc && tsc -p tsconfig.cjs.json",
+    "build:browser": "rollup -c rollup.config.js --bundleConfigAsCjs"
   },
   "files": [
-    "dist"
+    "dist",
+    "types"
   ],
   "repository": {
     "type": "git",
@@ -24,14 +29,22 @@
   "license": "ISC",
   "devDependencies": {
     "@coral-xyz/borsh": "^0.30.1",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-replace": "^5.0.7",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/bn.js": "^5.1.5",
     "@types/node": "^20.14.1",
     "dotenv": "^16.4.5",
     "js-sha256": "^0.11.0",
-    "typescript": "^5.4.5"
+    "rimraf": "^3.0.2",
+    "rollup": "^4.18.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.2"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
+    "@rollup/plugin-json": "^6.1.0",
     "@solana/spl-token": "^0.4.6",
     "@solana/web3.js": "^1.92.1"
   }
