--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "pumpdotfun-sdk",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "A simple SDK for interacting with pumpdotfun",
+  
   "module": "./dist/esm/index.js",
   "main": "./dist/cjs/index.js",
   "browser": "./dist/browser/index.js",
@@ -45,7 +46,7 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
     "@rollup/plugin-json": "^6.1.0",
-    "@solana/spl-token": "^0.4.6",
+    "@solana/spl-token": "0.4.6",
     "@solana/web3.js": "^1.92.1"
   }
 }
