--- a/package.json
+++ b/package.json
@@ -40,16 +40,18 @@
     "js-sha256": "^0.11.0",
     "rimraf": "^3.0.2",
     "rollup": "^4.18.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.2"
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
     "@fleekxyz/sdk": "^1.4.2",
     "@rollup/plugin-json": "^6.1.0",
-    "@solana/spl-token": "0.4.6",
-    "@solana/web3.js": "^1.92.1",
+    "@solana/spl-token": "^0.4.0",
+    "@solana/web3.js": "^1.89.1",
+    "axios": "^1.6.8",
+    "jito-ts": "^4.1.0",
     "tsx": "^4.16.2",
+    "typescript": "^5.3.3",
     "undici": "^6.19.2"
   }
 }
